--- a/contributions.Rmd
+++ b/contributions.Rmd
@@ -1364,6 +1364,43 @@ ggplot(aes(x = contb_receipt_dt,
 
 ```
 
+```{r echo=FALSE, Multivariate_Plot_for_amt_dt_city_party5}
+
+ggplot(aes(x = contb_receipt_dt, 
+           y = contb_receipt_amt + 1,
+           color = cand_nm),
+       data = subset(new_Data, cand_nm %in% main_cands_counts$cand_nm)) +
+  geom_jitter(alpha = 0.05) +
+  scale_x_date(date_breaks = '3 month') +
+  scale_color_brewer(type = 'qual',
+                     palette = 1,
+                     guide = guide_legend(title = 'Main candidates',
+                                          override.aes = list(size = 2,
+                                                              alpha = 1))) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) +
+  scale_y_log10()
+
+```
+
+```{r echo=FALSE, Multivariate_Plot_for_amt_dt_city_party6}
+
+ggplot(aes(x = contbr_city, 
+           group = cand_party,
+           color = cand_party),
+       data = subset(new_Data, 
+                     election_tp != '' & 
+                       contbr_city %in% top10_sum_amounts_city$contbr_city)) +
+  facet_wrap(~election_tp) +
+  geom_line(stat = 'count') +
+  scale_color_brewer(type = 'qual',
+                     palette = 1,
+                     guide = guide_legend(title = 'Party',
+                                          override.aes = list(size = 2,
+                                                              alpha = 1))) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
+
+```
+
 # Multivariate Analysis
 
 ### Talk about some of the relationships you observed in this part of the \
